# auth-server

./: Cargo.toml  README.md
src/: main.rs
src/db/: mod.rs  model.rs  user.rs
src/errors/: mod.rs
src/routers/: mod.rs  users.rs
src/routers/users/: create.rs  delete.rs  login.rs  logout.rs  mod.rs  refreshtoken.rs  verify.rs
src/utils/: custom_settings.rs  errors.rs  jwt.rs  mod.rs  str2int.rs
