[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = "0.4.23"
mongodb = "2.3.1"
jsonwebtoken = "8.2.0"
sha2 = "0.10.6"
digest = "0.10.6"
rand = "0.8.5"
getrandom = "0.2.8"
futures = "0.3.25"